--- a/QuizAppAPI/Models/Models.csproj
+++ b/QuizAppAPI/Models/Models.csproj
@@ -5,5 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-</Project>
+	<ItemGroup>
+		<PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+		<PackageReference Include="MongoDB.Driver.Core" Version="2.30.0" />
+	</ItemGroup>
+	</Project>
