--- a/QuizAppAPI/QuizAppAPI/QuizAppAPI.csproj
+++ b/QuizAppAPI/QuizAppAPI/QuizAppAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Models\QuizApp.Models.csproj" />
   </ItemGroup>
 
 </Project>
