--- a/QuizApp/QuizApp.WASM/QuizApp.BlazorWASM.csproj
+++ b/QuizApp/QuizApp.WASM/QuizApp.BlazorWASM.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\QuizApp.Models\QuizApp.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\js\ExamView.js" />
+  </ItemGroup>
+
 </Project>
