I have missed this project, made the development environment after deployment

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ obj/
 # Ignore VS Code settings
 .vscode/
 
+#Ignore Docker
+**/Dockerfile*
+Dockerfile*
+
+#ignore certificate
+*.pfx
+
 # Ignore Visual Studio cache, temp, and workspace
 .vs/
 .ipch/
