Added Repository Configuration for crud

--- a/QuizApp/QuizApp.WASM/QuizApp.BlazorWASM.csproj
+++ b/QuizApp/QuizApp.WASM/QuizApp.BlazorWASM.csproj
@@ -22,4 +22,8 @@
     <None Include="wwwroot\js\ExamView.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="npm\" />
+  </ItemGroup>
+
 </Project>
