--- a/QuizApp/QuizApp.BFF/QuizApp.BFF.csproj
+++ b/QuizApp/QuizApp.BFF/QuizApp.BFF.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
