Fixed Submission Bug logic

--- a/QuizApp/QuizApp.API/QuizApp.API.csproj
+++ b/QuizApp/QuizApp.API/QuizApp.API.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\QuizApp.Shared\QuizApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Authorization\" />
+  </ItemGroup>
+
 </Project>
