Added Configuration to urls

--- a/QuizApp/QuizApp.BFF/QuizApp.BFF.csproj
+++ b/QuizApp/QuizApp.BFF/QuizApp.BFF.csproj
@@ -16,4 +16,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuizApp.Shared\QuizApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
