--- a/QuizApp/docker-compose.yml
+++ b/QuizApp/docker-compose.yml
@@ -6,3 +6,10 @@ services:
     build:
       context: .
       dockerfile: QuizApp.API/Dockerfile
+
+  quizapp.bff:
+    image: ${DOCKER_REGISTRY-}quizappbff
+    build:
+      context: .
+      dockerfile: QuizApp.BFF/Dockerfile
+
