--- a/QuizApp/QuizApp.Identity/QuizApp.Identity.csproj
+++ b/QuizApp/QuizApp.Identity/QuizApp.Identity.csproj
@@ -4,12 +4,17 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<UserSecretsId>3689ff0f-b220-4d2c-8f45-5d72ae8b8917</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" version="7.2.0" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.11" />
+
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
 
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
