--- a/QuizApp/docker-compose.yml
+++ b/QuizApp/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       context: .
       dockerfile: QuizApp.BFF/Dockerfile
 
+
+  quizapp.identity:
+    image: ${DOCKER_REGISTRY-}quizappidentity
+    build:
+      context: .
+      dockerfile: QuizApp.Identity/Dockerfile
+
