--- a/QuizApp/launchSettings.json
+++ b/QuizApp/launchSettings.json
@@ -5,7 +5,8 @@
       "commandVersion": "1.0",
       "serviceActions": {
         "quizapp.api": "StartDebugging",
-        "quizapp.bff": "StartDebugging"
+        "quizapp.bff": "StartDebugging",
+        "quizapp.identity": "StartDebugging"
       }
     }
   }
