--- a/QuizApp/QuizApp.Models/QuizApp.Models.csproj
+++ b/QuizApp/QuizApp.Models/QuizApp.Models.csproj
@@ -8,5 +8,6 @@
 	<ItemGroup>
 		<PackageReference Include="MongoDB.Driver" Version="3.1.0" />
 		<PackageReference Include="MongoDB.Driver.Core" Version="2.30.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
 	</ItemGroup>
 	</Project>
